--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@
 DATABASE_URL="postgresql://junghoonko:randompassword@localhost:5432/Server-insta?schema=public"
 PORT=4000
 PRIVATE_KEY=Starcoex
+AWS_CONSOL_LINK=https://401702107525.signin.aws.amazon.com/console
+AWS_SECRET_KEY=GCbqHJOU1TFX23d1HOVUCcv6/dfxrCD7v59OQolA
+AWS_ACCESS_KEY=AKIAV3B2PXGC3AN4FM67
