--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.8.1",
+    "@aws-sdk/types": "^3.378.0",
     "@graphql-codegen/cli": "^5.0.0",
     "@prisma/client": "^5.0.0",
     "@types/fs-extra": "^11.0.1",
+    "@types/ftp": "^0.3.33",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "apollo-server-express": "^3.12.0",
+    "aws-sdk": "^2.1425.0",
+    "basic-ftp": "^5.0.3",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
+    "ftp": "^0.3.10",
     "graphql": "^16.7.1",
     "graphql-scalars": "^1.22.2",
     "graphql-upload": "^16.0.2",
