--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@prisma/client": "^5.0.0",
     "@types/fs-extra": "^11.0.1",
     "@types/ftp": "^0.3.33",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "apollo-server-express": "^3.12.0",
     "aws-sdk": "^2.1425.0",
@@ -33,10 +32,13 @@
     "ftp": "^0.3.10",
     "graphql": "^16.7.1",
     "graphql-scalars": "^1.22.2",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^16.0.2",
     "graphql-upload-minimal": "^1.5.4",
+    "graphql-ws": "^5.14.0",
     "jsonwebtoken": "^9.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
@@ -48,6 +50,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/graphql-upload": "^16.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.5",
     "dotenv": "^16.3.1",
     "graphql-tag": "^2.12.6",
